--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "antd": "^3.26.1",
     "color": "^3.1.2",
     "flux": "^3.1.3",
     "history": "^4.10.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-custom-properties": "^1.2.0",
     "react-dom": "^16.12.0",
