--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "color": "^3.1.2",
     "flux": "^3.1.3",
     "history": "^4.10.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-custom-properties": "^1.2.0",
